# ti-mmwave-build-tools

./: .dockerignore  .gitignore  CMakeLists.txt  CTestConfig.cmake  Dockerfile  Makefile  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  docs.yml  pages.yml
cmake/: RunConfiguro.cmake  RunMetaImage.cmake  TiMmwaveSdk.cmake  TiMmwaveSdkPaths.cmake
cmake/boards/: iwr6843aop.cmake
cmake/devices/: xwr68xx.cmake
config/: demo-profiles.tsv  devices.tsv  machine.env.example  sdk-manifest.json  starter-demo-profiles.tsv  toolbox-application-profiles.tsv  toolbox-oob-profiles.tsv
demos/sdk/: README.md
demos/xwr1843boost-mss-dss/: CMakeLists.txt  README.md
demos/xwr1843boost-mss-only/: CMakeLists.txt  README.md
demos/xwr6843aop-mss-dss/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
demos/xwr6843aop-mss-only/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
demos/xwr6843isk-mss-dss/: .gitignore  CMakeLists.txt  README.md
demos/xwr6843isk-mss-only/: CMakeLists.txt  Makefile  (+1 more)
docker/: Dockerfile.sdk-full
docs/: ABOUT.md  AI_CONVERSION.md  CI.md  DEMO_SELECTION.md  DEVICE_SUPPORT.md  DOCKER_IMAGE.md  MAINTENANCE.md  PORTABILITY.md  PROJECT_MANAGEMENT.md  PROJECT_OVERVIEW.md  PROJECT_TEMPLATE.md  STARTER_DEMOS.md  TOOLBOX_ANALYSIS.md  UNIFLASH.md  install.py
examples/xwr68xx-sdk-mss-dss-cmake/: CMakeLists.txt
flash-ui/: cli.js  core.js  server.js
reports/: demo-profile-smoke-20260515T160000Z.md  demo-profile-validation-20260515T153535Z.md  device-validation-20260515T090545Z.md  device-validation-20260515T104422Z.md  device-validation-20260515T123503Z.md  github-actions-smoke-20260515T0920Z.md  project-template-validation-20260515T130010Z.md  sdk-full-image-validation-20260515T140042Z.md  uniflash-integration-20260515T090526Z.md
scripts/: benchmark.sh  bootstrap-windows.ps1  build-sdk-image.sh  build-xwr68xx-sdk-demo.sh  check-official-demo-manifest.sh  check-ti-linux.sh  ci.sh  clean.sh  cmake-build-project.sh  cmake-build-xwr68xx-sdk-demo.sh  create-mmwave-app.sh  docker-build.sh  docker-shell.sh  doctor.sh  flash-common.sh  flash-doctor.sh  flash-dry-run.sh  flash-list.sh  flash-ui.sh  flash.sh  github-actions-smoke.sh  lib.sh  mmwave-run.sh  mmwavelab-flash  native-build-project.sh  native-cmake-build-xwr68xx-sdk-demo.sh  new-project.sh  package-artifacts.sh  robustness-loop.sh  robustness-score.py  run-repo-smoke.sh  sdk-image-smoke.sh  test.sh  ti-sdk-env.sh  validate-cmake-portability.sh  validate-demo-profiles.sh  validate-devices.sh  validate-install-profiles.sh  validate-starter-demos.py
(+92 files in other folders)
